plugins/rocks.xml.webhelp/css/topic.css
/* ... */
#button-show-active:hover {
    background-image: url(../img/toc-show-active-white.svg);
    background-color: #2c74eb;
}

#button-show-active.inactive {
    background-image: url(../img/toc-show-active-light.svg);
}

#button-show-active.inactive:hover {
    background-color: inherit;
}

.button-dropdown-download {
    background-image: url(../img/download.svg);
    background-repeat: no-repeat;
    background-position: center;
    background-color: #FFFFFF;
    padding: 20px;
    font-size: 16px;
    border: none;
    left: 45em;
    cursor: pointer;
    top: 1.7em;
    border-radius: 50%;
}

.button-dropdown-download:hover,
.button-dropdown-download:focus {
    background-image: url(../img/download-white.svg);
    background-color: #2c74eb;
}

.dropdown-content-download {
    display: none;
    position: absolute;
    background-color: #f1f1f1;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
    z-index: 1;
    right: 10%;
    top: 2.7em;
    width: 16rem;
}

.dropdown-content-download div {
    color: black;
    padding-left: 0.5rem;
    text-decoration: none;
    text-align: left;
    display: block;
}

.dropdown-content-download a:hover {
    background-color: #ddd
}

.button-print {
    background-image: url(../img/print.svg);
    background-repeat: no-repeat;
    background-position: center;
    background-color: #FFFFFF;
    padding: 20px;
    font-size: 16px;
    border: none;
    left: 49em;
    cursor: pointer;
    bottom: 0.4em;
    border-radius: 50%;
}

.button-print:hover {
    background-image: url(../img/print-white.svg);
    background-color: #2c74eb;
}

.button-dropdown-share-google-drive {
    background-image: url(../img/save-to-drive.svg);
    background-repeat: no-repeat;
    background-position: center;
    background-color: #FFFFFF;
    border-radius: 50%;
    padding: 20px;
    font-size: 16px;
    border: none;
    position: relative;
    cursor: pointer;
}

.button-dropdown-share-google-drive:hover,
.button-dropdown-share-google-drive:focus {
    background-image: url(../img/save-to-drive-white.svg);
    background-color: #2c74eb;
}

.dropdown-google-drive {
    position: relative;
    display: inline-block;
    margin-left: 1rem;
}

.dropdown-content-google-drive {
    display: none;
    position: absolute;
    background-color: #f1f1f1;
    max-width: 5px;
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
    z-index: 1;
    right: 1.6em;
    top: 2.4em;
}

.dropdown-content-google-drive div {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}

.dropdown-content-google-drive a:hover {
    background-color: #ddd
}

/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
.show {
    display: block;
}


.is-sticky {
    border-bottom: 1px solid #e7e7e7;
}

.expand-collapse-search-container {
    display: inline-block;
    position: relative;
    transform: translateX(100%);
    transition: all ease-in-out .5s;
    opacity: 0;
    width: 0;
}

.is-sticky .expand-collapse-search-container {
    display: inline-block;
    transform: translateX(0%);
    transition: all ease-in-out .5s;
    opacity: 100%;
    width: 73px;
}

.expand-collapse-search {
    background: url(../img/search-grey.svg) center no-repeat;
    background-color: #FFFFFF;
    padding: 20px;
    font-size: 16px;
    border: none;
    left: 49em;
    cursor: pointer;
    bottom: 0.4em;
    border-radius: 50%;
}

.expand-collapse-search:hover {
    background: url(../img/search-white.svg) center no-repeat;
    background-color: #2c74eb;
}

.expand-collapse-search-container.expanded .expand-collapse-search {
    background: url(../img/search-close.svg) center no-repeat;
}

.expand-collapse-search-container.expanded .expand-collapse-search:hover {
    background: url(../img/search-close-white.svg) center no-repeat;
    background-color: #2c74eb;
}

.main-button-container-wrapper {
    margin: 15px auto;
    padding: 1px 1rem;
    position: sticky;
    top: -1px;
    z-index: 4;
    background: #ffffff;
}

.topic-page-sticky-search-container {
    position: fixed;
    width: 100%;
    top: 0;
    height: 60px;
    opacity: 0;
    transition: all ease-in-out .5s;
    z-index: 3;
    transform: translateY(0);
    background-color: #ffffff;
    box-shadow: 0 10px 10px #f3f3f3;
}

.is-sticky + .topic-page-sticky-search-container.expanded {
    opacity: 100%;
    transform: translateY(100%);
}

.topic-page-sticky-search-container .search-input-container {
    margin: 10px auto;
    height: 40px;
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr;
}

.topic-page-sticky-search-container .search-input-container .search-input {
    grid-column-start: 1;
    grid-column-end: -1;
    grid-row-start: 1;
}

.buttons-separator {
    border-left: 1px solid #e7e7e7;
    display: inline;
    height: 1rem;
    vertical-align: -webkit-baseline-middle;
    margin: 0 1rem;
}

#sticky-search-button {
    background: url(../img/search-grey.svg) center no-repeat;
    height: 40px;
    width: 40px;
    grid-column-start: 1;
    grid-column-end: -1;
    grid-row-start: 1;
    justify-self: end;
}
/* --- Button bar END --- */

/* --- Table of contents (TOC) START --- */
.container.max-width {
    overflow: hidden;
}

#main-wrapper {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr;
}

#toc-wrapper {
    grid-column-start: 1;
    grid-column-end: -1;
    grid-row-start: 1;
    opacity: 100%;
    width: 33.33333333%;
    transform: translateX(0%);
    transition: all 1s ease-in-out .5s;
    z-index: 2;
}

#toc-wrapper.hidden {
    opacity: 0;
    transform: translateX(-100%);
    transition: all 1s ease-in-out .5s;
}
/* ... */

